--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="lampuTamu" style="display: flex; justify-content: center;">
                 <div style="margin: 5px; text-align: center; margin-bottom: 16px; display: flex; flex-direction: column; align-items: center;">
                     <div class="gambar" style="width: 100px; margin-bottom: 10px;">
-                        <img src="assets/lampuON.png" alt="lampuoN">
+                        <img src="assets/lampuon.gif" alt="lampuoN">
                     </div>
                     <label class="p-switch" style="margin: auto; border: 1px solid black; padding: 5px 20px; border-radius: 10px;">
                         <input id="switc" type="checkbox" class="p-switch__input" checked="" role="switch">
@@ -38,7 +38,7 @@
                 <!-- 2 -->
                 <div style="margin: 5px; text-align: center; margin-bottom: 16px; display: flex; flex-direction: column; align-items: center;">
                     <div class="gambar" style="width: 100px; margin-bottom: 10px;">
-                        <img src="assets/lampuON.png" alt="lampuoN">
+                        <img src="assets/lampuon.gif" alt="lampuoN">
                     </div>
                     <label class="p-switch" style="margin: auto; border: 1px solid black; padding: 5px 20px; border-radius: 10px;">
                         <input id="switc" type="checkbox" class="p-switch__input" checked="" role="switch">
@@ -50,7 +50,7 @@
 
                 <div style="margin: 5px; text-align: center; margin-bottom: 16px; display: flex; flex-direction: column; align-items: center;">
                     <div class="gambar" style="width: 100px; margin-bottom: 10px;">
-                        <img src="assets/lampuON.png" alt="lampuoN">
+                        <img src="assets/lampuon.gif" alt="lampuoN">
                     </div>
                     <label class="p-switch" style="margin: auto; border: 1px solid black; padding: 5px 20px; border-radius: 10px;">
                         <input id="switc" type="checkbox" class="p-switch__input" checked="" role="switch">
@@ -62,7 +62,7 @@
 
                 <div style="margin: 5px; text-align: center; margin-bottom: 16px; display: flex; flex-direction: column; align-items: center;">
                     <div class="gambar" style="width: 100px; margin-bottom: 10px;">
-                        <img src="assets/lampuON.png" alt="lampuoN">
+                        <img src="assets/lampuon.gif" alt="lampuoN">
                     </div>
                     <label class="p-switch" style="margin: auto; border: 1px solid black; padding: 5px 20px; border-radius: 10px;">
                         <input id="switc" type="checkbox" class="p-switch__input" checked="" role="switch">
@@ -75,7 +75,7 @@
             <div class="lampuKeluarga" style="display: flex; justify-content: center;">
                 <div style="margin: 5px; text-align: center; margin-bottom: 16px; display: flex; flex-direction: column; align-items: center;">
                     <div class="gambar" style="width: 100px; margin-bottom: 10px;">
-                        <img src="assets/lampuON.png" alt="lampuoN">
+                        <img src="assets/lampuon.gif" alt="lampuoN">
                     </div>
                     <label class="p-switch" style="margin: auto; border: 1px solid black; padding: 5px 20px; border-radius: 10px;">
                         <input id="switc" type="checkbox" class="p-switch__input" checked="" role="switch">
@@ -87,7 +87,7 @@
 
                 <div style="margin: 5px; text-align: center; margin-bottom: 16px; display: flex; flex-direction: column; align-items: center;">
                     <div class="gambar" style="width: 100px; margin-bottom: 10px;">
-                        <img src="assets/lampuON.png" alt="lampuoN">
+                        <img src="assets/lampuon.gif" alt="lampuoN">
                     </div>
                     <label class="p-switch" style="margin: auto; border: 1px solid black; padding: 5px 20px; border-radius: 10px;">
                         <input id="switc" type="checkbox" class="p-switch__input" checked="" role="switch">
@@ -99,7 +99,7 @@
 
                 <div style="margin: 5px; text-align: center; margin-bottom: 16px; display: flex; flex-direction: column; align-items: center;">
                     <div class="gambar" style="width: 100px; margin-bottom: 10px;">
-                        <img src="assets/lampuON.png" alt="lampuoN">
+                        <img src="assets/lampuon.gif" alt="lampuoN">
                     </div>
                     <label class="p-switch" style="margin: auto; border: 1px solid black; padding: 5px 20px; border-radius: 10px;">
                         <input id="switc" type="checkbox" class="p-switch__input" checked="" role="switch">
@@ -112,7 +112,7 @@
             <div class="lampuTidur" style="display: flex; justify-content: center;">
                 <div style="margin: 5px; text-align: center; margin-bottom: 16px; display: flex; flex-direction: column; align-items: center;">
                     <div class="gambar" style="width: 100px; margin-bottom: 10px;">
-                        <img src="assets/lampuON.png" alt="lampuoN">
+                        <img src="assets/lampuon.gif" alt="lampuoN">
                     </div>
                     <label class="p-switch" style="margin: auto; border: 1px solid black; padding: 5px 20px; border-radius: 10px;">
                         <input id="switc" type="checkbox" class="p-switch__input" checked="" role="switch">
@@ -124,7 +124,7 @@
 
                 <div style="margin: 5px; text-align: center; margin-bottom: 16px; display: flex; flex-direction: column; align-items: center;">
                     <div class="gambar" style="width: 100px; margin-bottom: 10px;">
-                        <img src="assets/lampuON.png" alt="lampuoN">
+                        <img src="assets/lampuon.gif" alt="lampuoN">
                     </div>
                     <label class="p-switch" style="margin: auto; border: 1px solid black; padding: 5px 20px; border-radius: 10px;">
                         <input id="switc" type="checkbox" class="p-switch__input" checked="" role="switch">
@@ -137,7 +137,7 @@
             <div class="lampuMakan">
                 <div style="margin: 5px; text-align: center; margin-bottom: 16px; display: flex; flex-direction: column; align-items: center;">
                     <div class="gambar" style="width: 100px; margin-bottom: 10px;">
-                        <img src="assets/lampuON.png" alt="lampuoN">
+                        <img src="assets/lampuon.gif" alt="lampuoN">
                     </div>
                     <label class="p-switch" style="margin: auto; border: 1px solid black; padding: 5px 20px; border-radius: 10px;">
                         <input id="switc" type="checkbox" class="p-switch__input" checked="" role="switch">
